[metadata]
name = nfm
version = attr: nfm.__version__
url = https://github.com/niflows/nfm
author = Nipype Developers
author_email = neuroimaging@python.org
description = nfm: niflow management tool
license = Apache License, 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development

[options]
packages = find:
install_requires = Click

[options.entry_points]
console_scripts =
    nfm = nfm.cli:main
