[metadata]
name = niflow-manager
url = https://github.com/niflows/niflow-manager
author = Nipype Developers
author_email = neuroimaging@python.org
description = nfm: niflow management tool
license = Apache License, 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development

[options]
packages = find:
install_requires = Click
include_package_data = True

[options.entry_points]
console_scripts =
    nfm = niflow_manager.cli:main

[options.package_data]
niflow_manager =
    data/templates/*
    data/templates/*/*
    data/templates/*/*/*
    data/templates/*/*/*/*
    data/templates/*/*/*/*/*
    data/templates/*/*/*/*/*/*

[options.extras_require]
test = pytest

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = niflow_manager/_version.py
versionfile_build = niflow_manager/_version.py
tag_prefix =
parentdir_prefix =

[coverage:run]
branch = True

[tool:pytest]
norecursedirs = .git data
